Adding more functionality

--- a/7lalak/Localizable.strings
+++ b/7lalak/Localizable.strings
@@ -13,22 +13,25 @@
 "OK"="Ok";
 "CANCEL"="Cancel";
 "DONE"="Done";
+"YES"="Yes";
+"AGREE"="I agree";
 "SEARCH"="Search";
 "SEARCH_RESULT"="Search Result";
-"ERROR_NO_RESULT"="No result found !";
+"ERROR_NO_RESULT"="No results found !";
 "VIDEO"="Video";
 "IMAGES"="Photos";
+"PHONE_NAME_REQUIRED"="Please enter your name and phone number";
 "IMAGE"="Image";
 "DESCRIPTION"="Description";
 "MESSAGE_CHOOSE_ADS"="Please choose Ads type";
 "ONE_VID_ATTACHED"="1 video file attached";
 "REPLACE_VID"="Replace Video";
-"MESSAGE_ADs_Added"="Your Ads has been added";
+"MESSAGE_ADs_Added"="Your Ads has been added successfuly and will be available as soon as posible";
 "VCODE_TITLE"="Verifcation Code";
 "ERROR_INVALID_VOCODE"="Invalid Verifcation code ! please try again";
 "ERROR_EMPTY_VCODE"="Verifcation code can't be empty!";
 "MESSAGE_REGISTER_SUCCESS_TITLE"="Registeration Complete";
-"MESSAGE_REGISTER_SUCCESS_MSG"="Congarulation, your account now is active, you have got free Ads points";
+"MESSAGE_REGISTER_SUCCESS_MSG"="Congratulation, your account is active now, you have got a free Ads points";
 "MESSAGE_FAILD_REGISTER"="Registeration Faild";
 "MESSAGE_FAILD_REGISTER_MSG"="Please try later";
 "TITLE_MORE_ADD_IMAGE"="Add Image Ad";
@@ -39,4 +42,22 @@
 "TITLE_MORE_ABOUT_Us"="About Us";
 "TITLE_MORE_CONTACT_Us"="Contact Us";
 "TITLE_MORE_REGISTER"="Registeration";
+"TITLE_MORE_MY_Ads"="My Ads";
 "ERROR_NO_ADs_SCORE"="You dont have suffeicent scroe, please buy Ads score to complete this action.";
+"DEACTIVE_MESSAGE"="Are you sure to dactive your account?";
+"SURE"="I'm sure";
+"DEACTIVE_SUCCESS"="Your account is temporarily deactived.";
+"CONFIRM_REGISTERATION"="Confirm registeration?";
+
+
+
+
+
+
+
+
+
+
+
+
+
