progress & home page

--- a/7lalak/Localizable.strings
+++ b/7lalak/Localizable.strings
@@ -51,7 +51,7 @@
 "DEACTIVE_SUCCESS"="Your account is temporarily deactived.";
 "CONFIRM_REGISTERATION"="Confirm registeration?";
 "DELETE_CONFIRM"="Are you sure to delete ?";
-
+"FOUND_UPDATE"="A new version of 7lalek is available, Upgrade your version by visit app store.";
 
 
 
