--- a/7lalak/Localizable.strings
+++ b/7lalak/Localizable.strings
@@ -49,7 +49,7 @@
 "DEACTIVE_MESSAGE"="Are you sure to dactive your account?";
 "SURE"="I'm sure";
 "DEACTIVE_SUCCESS"="Your account is temporarily deactived.";
-"CONFIRM_REGISTERATION"="Confirm registeration?";
+"CONFIRM_REGISTERATION"="Complete registeration?";
 "DELETE_CONFIRM"="Are you sure to delete ?";
 "FOUND_UPDATE"="A new version of 7lalek is available, Upgrade your version by visit app store.";
 
