--- a/7lalak/en.lproj/Localizable.strings
+++ b/7lalak/en.lproj/Localizable.strings
@@ -87,6 +87,7 @@
 "btn_Add_Image"="Add Image";
 "btn_Add_Video"="Add Video";
 "btn_Upload"="Upload";
+"FLAG_LESS_25MB"="Please choose video less than 2MB";
 //=== More -> info  === //
 "label_adsScore"="Free Ads Score";
 "label_adsVideoScore"="Video Score";
