App-Notes(Localization)

--- a/7lalak/ar.lproj/Localizable.strings
+++ b/7lalak/ar.lproj/Localizable.strings
@@ -73,6 +73,7 @@
 "TAB_MEDIA"="الصوتيات";
 "TAB_MORE"="المزيد";
 "NEW"="new";
+"TAB_ADD"="Add Ad";
 //===More Page ====//
 "BTN_Add"="اضافه اعلان";
 "BTN_FAV"="المفضله";
