--- a/7lalak/en.lproj/Localizable.strings
+++ b/7lalak/en.lproj/Localizable.strings
@@ -48,6 +48,7 @@
 "TITLE_MORE_ADD_VIDEO"="Add Video Ad";
 "TITLE_MORE_BUY_Ads"="Buy Ads";
 "TITLE_MORE_FAV"="Favoriate";
+"TAB_ADD"="Add Ad";
 "TITLE_MORE_ACCOUNT_INFO"="Account Info";
 "TITLE_MORE_ABOUT_Us"="About Us";
 "TITLE_MORE_CONTACT_Us"="Contact Us";
