--- a/7lalak/ar.lproj/Localizable.strings
+++ b/7lalak/ar.lproj/Localizable.strings
@@ -123,7 +123,7 @@
 
 "ADs_TEXT_REQUIRED"="يرجى ادخال على الاقل سطر في حقل وصف الاعلان";
 
-"ADs_CAT_REQUIRED"="يرجى اختيار الاقسم";
+"ADs_CAT_REQUIRED"="يرجى اختيار الاقسام";
 
 //=========================new Strings=================//
 
